# Discord-Rich-Presence-RE2-Remake

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: main.cpp
